--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
 <connectionStrings>
-    <add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient" />
-    <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=emilia1" providerName="System.Data.SqlClient" />-->
+    <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient" />-->
+    <add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=emilia1" providerName="System.Data.SqlClient" />
       </connectionStrings>
 </configuration>
