--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,7 @@
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
+      <add name="Access-Control-Request-Headers" value="Content-Type" />
       </customHeaders>
     </httpProtocol>
   </system.webServer>
@@ -12,8 +13,8 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
 <connectionStrings>
-    <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient" />-->
+    <add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient" />
     <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=emilia1" providerName="System.Data.SqlClient" />-->
-  <add name="conn" connectionString="Data Source=sql6003.site4now.net;Initial Catalog=DB_A2FB42_inmobiliaria;User Id=DB_A2FB42_inmobiliaria_admin;Password=muebles2017" providerName="System.Data.SqlClient" />
+  <!--<add name="conn" connectionString="Data Source=sql6003.site4now.net;Initial Catalog=DB_A2FB42_inmobiliaria;User Id=DB_A2FB42_inmobiliaria_admin;Password=muebles2017" providerName="System.Data.SqlClient" />-->
 </connectionStrings>
 </configuration>
