--- a/Web.config
+++ b/Web.config
@@ -3,18 +3,24 @@
   <system.webServer>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
-      <add name="Access-Control-Request-Headers" value="Content-Type" />
+        <add name="Access-Control-Allow-Origin" value="*"/>
+        <add name="Access-Control-Request-Headers" value="Content-Type"/>
       </customHeaders>
     </httpProtocol>
   </system.webServer>
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91"/>
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
-<connectionStrings>
-    <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient" />-->
-    <add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=emilia1" providerName="System.Data.SqlClient" />
-  <!--<add name="conn" connectionString="Data Source=sql6003.site4now.net;Initial Catalog=DB_A2FB42_inmobiliaria;User Id=DB_A2FB42_inmobiliaria_admin;Password=muebles2017" providerName="System.Data.SqlClient" />-->
-</connectionStrings>
+  <connectionStrings>
+    <!--<add name="conn" connectionString="Data Source=(local);Initial Catalog=Inmobiliaria;User Id=sa;Password=roberto" providerName="System.Data.SqlClient"/>-->
+    <add name="conn" connectionString="Data Source=192.185.6.36;Initial Catalog=ignaciopinor_inmobiliaria;User Id=ignaciopinor_useradmin;Password=Pa$$w0rd" providerName="System.Data.SqlClient"/>
+    <!--<add name="conn" connectionString="Data Source=127.0.0.1;Initial Catalog=ignaciopinor_inmobiliaria;User Id=ignaciopinor_useradmin;Password=Pa$$w0rd" providerName="System.Data.SqlClient"/>-->
+    <!--<add name="conn" connectionString="Data Source=10.10.200.60;Initial Catalog=Inmobiliaria;User Id=sa;Password=Portillo.5555" providerName="System.Data.SqlClient" />-->
+    <!--<add name="conn" connectionString="Data Source=sql6003.site4now.net;Initial Catalog=DB_A2FB42_inmobiliaria;User Id=DB_A2FB42_inmobiliaria_admin;Password=muebles2017" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
 </configuration>
