--- a/packages.config
+++ b/packages.config
@@ -3,5 +3,6 @@
   <package id="bootstrap.less" version="3.3.5" targetFramework="net45" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net45" />
   <package id="Moment.js" version="2.9.0" targetFramework="net45" />
 </packages>
